--- a/api/package.json
+++ b/api/package.json
@@ -9,15 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.13",
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.17",
-    "@types/express-validator": "^3.0.0",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^20.2.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cookie": "^0.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -27,6 +21,14 @@
     "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cookie": "^0.5.1",
+    "@types/cors": "^2.8.13",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.17",
+    "@types/express-validator": "^3.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^20.2.1",
     "nodemon": "^2.0.22"
   }
 }
