--- a/store/package.json
+++ b/store/package.json
@@ -1,34 +1,36 @@
 {
-  "name": "store",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@types/node": "20.2.1",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
-    "date-fns": "^2.30.0",
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.3",
-    "next": "13.4.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.0.4",
-    "zod": "^3.21.4"
-  },
-  "devDependencies": {
-    "@tailwindcss/forms": "^0.5.3",
-    "postcss": "^8.4.23",
-    "tailwind-merge": "^1.12.0",
-    "tailwindcss": "^3.3.2"
-  }
+			"name": "store",
+			"version": "0.1.0",
+			"private": true,
+			"scripts": {
+						"dev": "next dev",
+						"build": "next build",
+						"start": "next start",
+						"lint": "next lint"
+			},
+			"dependencies": {
+						"@fortawesome/fontawesome-svg-core": "^6.4.0",
+						"@fortawesome/free-solid-svg-icons": "^6.4.0",
+						"@fortawesome/react-fontawesome": "^0.2.0",
+						"@types/node": "20.2.3",
+						"@types/react": "18.2.6",
+						"@types/react-dom": "18.2.4",
+						"autoprefixer": "10.4.14",
+						"date-fns": "^2.30.0",
+						"eslint": "8.41.0",
+						"eslint-config-next": "13.4.3",
+						"next": "13.4.3",
+						"postcss": "8.4.23",
+						"react": "18.2.0",
+						"react-dom": "18.2.0",
+						"react-hook-form": "^7.43.9",
+						"react-query": "^3.39.3",
+						"tailwind-merge": "^1.12.0",
+						"tailwindcss": "3.3.2",
+						"typescript": "5.0.4",
+						"zod": "^3.21.4"
+			},
+			"devDependencies": {
+						"@tailwindcss/forms": "^0.5.3"
+			}
 }
