--- a/store/package.json
+++ b/store/package.json
@@ -25,6 +25,7 @@
 						"react-dom": "18.2.0",
 						"react-hook-form": "^7.43.9",
 						"react-query": "^3.39.3",
+						"react-toastify": "^9.1.3",
 						"tailwind-merge": "^1.12.0",
 						"tailwindcss": "3.3.2",
 						"typescript": "5.0.4",
